# ru-storeman

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  justfile  makefile  web.go
.github/workflow/: release.yaml
.github/workflows/: release.yml
src/: fn_help.rs  fn_start.rs  fn_version.rs  lib.rs  main.rs  signal.rs
