[package]
authors = ["WhatC <?>"]
name = "ru-storeman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"



[profile]
    [profile.dev]
        opt-level = 0

    [profile.release]
        codegen-units = 1
        debug = false
        debug-assertions = false
        incremental = false
        lto = true
        opt-level = 3
        overflow-checks = false
        panic = "abort"

